fix for spinner alignment

--- a/css/docs.css
+++ b/css/docs.css
@@ -3156,7 +3156,7 @@ body .scope-container {
     body .scope-container .button.load-this > .juicon, body .scope-container .button.load-this > .required-field:after, body .scope-container .button.load-this > .button.load-this:after, body .scope-container .button.load-this > .form__group.load-this:before, body .scope-container .button.load-this > .load-block, body .scope-container .panel__component > .close .button.load-this > .component-remove-x, body .scope-container .select2-container .select2-choice .select2-arrow .button.load-this > b, .select2-container .select2-choice .select2-arrow body .scope-container .button.load-this > b, body .scope-container .button.load-this > .select2-search-choice-close, body .scope-container .button.load-this > .close-modal-x {
       display: none; }
     body .scope-container .button.load-this:after {
-      left: .5px;
+      left: 0;
       margin-left: 4px;
       top: 1px;
       content: " \e62a";
@@ -3166,7 +3166,7 @@ body .scope-container {
   body .scope-container .form__group.load-this .input__wrap.has-icon--right > .juicon, body .scope-container .form__group.load-this .input__wrap.has-icon--right > .required-field:after, body .scope-container .form__group.load-this .input__wrap.has-icon--right > .button.load-this:after, body .scope-container .form__group.load-this .input__wrap.has-icon--right > .form__group.load-this:before, body .scope-container .form__group.load-this .input__wrap.has-icon--right > .load-block, body .scope-container .form__group.load-this .panel__component > .close .input__wrap.has-icon--right > .component-remove-x, body .scope-container .panel__component > .close .form__group.load-this .input__wrap.has-icon--right > .component-remove-x, body .scope-container .form__group.load-this .select2-container .select2-choice .select2-arrow .input__wrap.has-icon--right > b, .select2-container .select2-choice .select2-arrow body .scope-container .form__group.load-this .input__wrap.has-icon--right > b, body .scope-container .form__group.load-this .input__wrap.has-icon--right > .select2-search-choice-close, body .scope-container .form__group.load-this .input__wrap.has-icon--right > .close-modal-x, body .scope-container .form__group.load-this .select__wrap > .juicon, body .scope-container .form__group.load-this .select2-container > .juicon, body .scope-container .form__group.load-this .select__wrap > .required-field:after, body .scope-container .form__group.load-this .select2-container > .required-field:after, body .scope-container .form__group.load-this .select__wrap > .button.load-this:after, body .scope-container .form__group.load-this .select2-container > .button.load-this:after, body .scope-container .form__group.load-this .select__wrap > .form__group.load-this:before, body .scope-container .form__group.load-this .select2-container > .form__group.load-this:before, body .scope-container .form__group.load-this .select__wrap > .load-block, body .scope-container .form__group.load-this .select2-container > .load-block, body .scope-container .form__group.load-this .panel__component > .close .select__wrap > .component-remove-x, body .scope-container .panel__component > .close .form__group.load-this .select__wrap > .component-remove-x, body .scope-container .form__group.load-this .panel__component > .close .select2-container > .component-remove-x, body .scope-container .panel__component > .close .form__group.load-this .select2-container > .component-remove-x, body .scope-container .form__group.load-this .select2-container .select2-choice .select2-arrow .select__wrap > b, .select2-container .select2-choice .select2-arrow body .scope-container .form__group.load-this .select__wrap > b, body .scope-container .form__group.load-this .select2-container .select2-choice .select2-arrow .select2-container > b, .select2-container .select2-choice .select2-arrow body .scope-container .form__group.load-this .select2-container > b, body .scope-container .form__group.load-this .select__wrap > .select2-search-choice-close, body .scope-container .form__group.load-this .select2-container > .select2-search-choice-close, body .scope-container .form__group.load-this .select__wrap > .close-modal-x, body .scope-container .form__group.load-this .select2-container > .close-modal-x {
     display: none; }
   body .scope-container .form__group.load-this:before {
-    right: .5px;
+    right: 0;
     bottom: 0;
     padding: 12px 16px;
     font-size: 1rem;
@@ -3175,7 +3175,7 @@ body .scope-container {
   body .scope-container .form__group.load-this input {
     padding-right: 48px; }
   body .scope-container .select2-container.load-this .select2-choice .select2-arrow b {
-    right: .5px; }
+    right: 0px; }
   body .scope-container .load-block {
     color: #9faab5;
     font-size: 300%;
